# notion-songwriter

./: README.md  pyproject.toml
modules/: chord.py  enums.py  note.py
tests/: test_chord.py  test_note.py
